library-editor: update sizing and build