@@ -23,14 +23,23 @@
  * OTHER DEALINGS IN THE SOFTWARE.
  */
 
+import org.gradle.internal.os.OperatingSystem
+
 plugins {
     id("io.github.mzmine.java-app-conv")
     id("io.github.mzmine.javafx-conv")
+    alias(libs.plugins.beryx.runtime)
 }
 
 repositories {
     mavenCentral()
     maven { url = uri(layout.projectDirectory.dir("../local-repo/")) }
+
+    // sirius sdk (required for mzmine-community dependency)
+    maven {
+        url = uri("https://gitlab.com/api/v4/projects/66031889/packages/maven")
+        name = "BG GitLab Common Public"
+    }
 }
 
 dependencies {
@@ -44,7 +53,107 @@ dependencies {
     implementation(libs.bundles.jfreechart)
 }
 
+val appName = "spectral-library-editor"
+val operatingSystem = OperatingSystem.current()
+val iconDir = layout.projectDirectory.dir("../mzmine-community/src/main/resources")
+val runtimeModules = mutableListOf(
+    "java.desktop",
+    "java.logging",
+    "java.net.http",
+    "java.rmi",
+    "java.sql",
+    "java.datatransfer",
+    "java.management",
+    "java.xml",
+    "java.xml.crypto",
+    "jdk.xml.dom",
+    "java.naming",
+    "java.transaction.xa",
+    "java.scripting",
+    "java.compiler",
+    "jdk.jsobject",
+    "jdk.jfr",
+    "java.security.sasl",
+    "java.security.jgss",
+    "jdk.unsupported",
+    "jdk.unsupported.desktop",
+)
+if (operatingSystem.isWindows) {
+    // Required on Windows to access the trust store for root certificates.
+    runtimeModules.add("jdk.crypto.mscapi")
+}
+
 application {
     mainClass.set("io.github.mzmine.speclibeditor.SpectralLibraryEditorLauncher")
-    applicationName = "spectral-library-editor"
+    applicationName = appName
+    applicationDefaultJvmArgs = listOf(
+        "--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls",
+        "--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
+        "--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
+        "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
+        "--add-exports=javafx.graphics/com.sun.javafx.css=org.controlsfx.controls",
+        "--add-opens=java.logging/java.util.logging=ALL-UNNAMED",
+    )
+}
+
+runtime {
+    options = listOf(
+        "--compress=zip-6",
+        "--vm=server",
+        "--no-header-files",
+        "--no-man-pages",
+        "--output",
+        "jre/jre",
+    )
+    modules = runtimeModules
+
+    jpackage {
+        if (operatingSystem.isWindows) {
+            installerType = "msi"
+            installerName = "${appName}_Windows_installer"
+            imageOptions = listOf("--icon", iconDir.file("mzmineIcon.ico").asFile.absolutePath)
+            installerOptions = listOf(
+                "--vendor", "mzio GmbH",
+                "--win-menu",
+                "--win-menu-group", appName,
+                "--win-shortcut",
+                "--win-dir-chooser",
+            )
+        }
+
+        if (operatingSystem.isMacOsX) {
+            installerType = "dmg"
+            installerName = "${appName}_macOS_installer"
+            imageOptions = listOf(
+                "--icon", iconDir.file("mzmineIcon.icns").asFile.absolutePath,
+                "--mac-package-name", appName,
+                "--mac-package-identifier", "io.github.mzmine.speclibeditor",
+            )
+            installerOptions = listOf("--vendor", "mzio GmbH")
+        }
+
+        if (operatingSystem.isLinux) {
+            installerName = "${appName}_Linux_installer"
+            imageOptions = listOf("--icon", iconDir.file("mzmineIcon.png").asFile.absolutePath)
+            installerOptions = listOf(
+                "--vendor", "mzio GmbH",
+                "--linux-package-name", appName,
+                "--linux-shortcut",
+                "--linux-menu-group", appName,
+            )
+        }
+
+        imageName = appName
+        jvmArgs = listOf(
+            "-showversion",
+            "-XX:MinHeapFreeRatio=50",
+            "-XX:MaxHeapFreeRatio=75",
+            "-XX:InitialRAMPercentage=5",
+            "-XX:MinRAMPercentage=75",
+            "-XX:MaxRAMPercentage=80",
+            "-enableassertions",
+            "--add-opens=java.logging/java.util.logging=ALL-UNNAMED",
+            "--enable-preview",
+        )
+    }
 }
